...
                android:background="@null">
            </ImageButton>

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.search.SearchBar
            android:id="@+id/searchBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/searchbar_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar">
        </com.google.android.material.search.SearchBar>
        <com.google.android.material.search.SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:hint="@string/searchbar_hint"
            app:layout_anchor="@id/searchBar"
            app:layout_constraintBottom_toBottomOf="@id/searchBar"
            app:layout_constraintEnd_toEndOf="parent"
...
