...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_name"
                tools:ignore="SmallSp,TextViewEdits" />

            <TextView
                android:id="@+id/text_followers_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/follower_count"
                android:textColor="@color/white"
                android:textSize="12sp"
...
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/text_followers_count"
                app:layout_constraintStart_toStartOf="@+id/text_followers_count"
                app:layout_constraintTop_toBottomOf="@+id/text_followers_count" />

            <TextView
                android:id="@+id/text_following_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/following_count"
                android:textColor="@color/white"
                android:textSize="12sp"
...
