...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <!-- Avatar -->
        <androidx.cardview.widget.CardView
            android:id="@+id/avatarCardView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:cardCornerRadius="28dp"
            app:cardPreventCornerOverlap="false"
            android:layout_marginEnd="16dp">

...
